index.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

/* universal */
body {
    background-color: whitesmoke;
    width: 100%;
    max-width: 400px;
    height: 100vh;
    position: relative;
    border: 0.3rem solid black;
    border-radius: 15px;
    font-family: 'Poppins', sans-serif;
    margin: 0 auto;
    max-height: 820px;
}

header {
    padding-right: 20px;
    padding-left: 20px;
}

.main-container {
    position: relative;
    height:90vh;
    max-height: 750px;
}

button {
    cursor: pointer;
}

/* utility section */
.hidden {
    display: none;
}



.not-allowed{
    cursor: not-allowed;
}

.bold {
    font-weight: bolder;
    font-size: 1.2em;
}

.center {
    text-align: center;
}

/* centering divs */

/* navigation bar elements */
.nav-bar {
    height: 60.75px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-icons {
    height: 34px;
    margin: 0px 18px;
    cursor: pointer;
}

.fa-dog{
    font-size: 33px;
    color: #c9d0d6;
}

.welcome-text-modal{
    margin-top: 3em;
    background: whitesmoke;
    width: 80%;
    margin: 0 auto;
    padding: 1em;
    border-radius: 15px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-align: center;
}


.brand-gradient-text{
    /* background: linear-gradient(to right, #f12711, #f5af19); */
    background: linear-gradient(to right, #f93a71, #f7817c);
    background-clip: text;
    -webkit-background-clip: text;
    /* For Safari */
    color: transparent;
    -webkit-text-fill-color: transparent;
    /* For Safari */
}

.brand-gradient{
    background: linear-gradient(to right, #f93a71, #f7817c);
}

/* welcome screen */
.welcome-screen{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    position: relative;
    margin: 0 auto;
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    overflow: hidden;
}

/* mains section */
.profile-container {
    position: relative;
    margin: 0 auto;
    width: 100%;
    height: 90%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    overflow: hidden;
}


#instruction{
    width:100%;
    height:45%;
    background-color: rgba(255, 255, 255, 0.5);
    position: absolute;
    padding: 1em;
    top:25%;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap:1em;
    color: #000000;
}

.instruction-text{
    margin: 0 auto;
    width:90%;
    font-size: 1.5em;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    gap:0.5em;
}

.instruction-icons{
    width:34px;
}


.profile-container > .final-message {
    padding-bottom: 1.2em;
    position: absolute;
    bottom: 2em;
    right: 2em;
}

.heart-icon{
    color:red;
    position: absolute;
}



/* profileimage section */


#profile-card {
    position: relative;
    transform-origin: 50% 99%;
    max-height: 720px;
    background-size: cover;
}

.profile-img {
    margin: 0px auto;
    height: 100%;
    width: 100%;
    display: block;
    object-fit: cover;
    z-index: 99
}

.final-image {
    height: 100%;
    background-size: cover;
}

/* badge section */

.badge {
    z-index: 1;
    position: absolute;
    width: 170px;
    top: 2.5em;
    left: 1em;
    -webkit-transform: rotate(-25deg);
    -moz-transform: rotate(-25deg);
    -ms-transform: rotate(-25deg);
    -o-transform: rotate(-25deg);
    transform: rotate(-25deg);
}


/* text overlay */

#text-overlay-container {
    position: relative;
    bottom: 90px;
    width: 400px;
    padding: 1em;
    color: white;
    display: flex;
    font-weight: 600;
    align-items: flex-start;
    text-shadow: 0 0 4px black;
}


/* additional profile container  */

.expanded-profile-container {
    color: black;
    height: 30%;
    overflow: hidden scroll;
    line-height: 1.5;
    padding-right: 1em;
    padding-left: 1em;
}

/* additional profile elements */

#location-icon-additional {
    color: #383737;
    width: 15px;
}

#dog-name,
#location-overlay {
    position: absolute;
}

#dog-name,
.name-additional {
    font-size: 1.7rem;
    bottom: 0.7em;
}

.name-additional,
.location-additional {
    padding-top: 0.25rem;
    padding-bottom: 0.3rem;
}



#location-overlay {
    font-size: 1.1rem;
    text-align: left;
}

#location-icon {
    position: relative;
    top: 1.5px;
    width: 15px;
}


/* #info-icon:hover {
    color: orange;
    cursor: pointer;
} */

.primary-icon{
    width:40px;
}


#info-icon.not-allowed{
    opacity: 0.5;
}

#info-icon,
#down-arrow {
    position: absolute;
    right: 2em;
    bottom: 50px;
    cursor: pointer;
    width:40px;
}

#down-arrow:hover,
.nav-icons:hover,
.nav-icons:active {
    opacity: 0.8;

}


.button-container {
    width: 100%;
    height: 90px;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2em;
    padding: 0px 30px;
    position: absolute;
    bottom: 0;
    left: 0px;
    border-radius: 0 0 10px 10px;
}

/* buttons */

.share-icon{
    width:34px
}

.share-btn{
    display: flex;
    margin: 1em auto;
    font-size: 1.3rem;
    padding: 0.7em 2em;
    border: 0;
    border-radius: 15px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    background: linear-gradient(to bottom, #fd746c, #ff9068);
    max-width: 300px;
}
.share-btn:hover,
.ready-btn:hover{
    opacity: 0.8;
}

.circle-btn-primary {
    height: 60px;
    width: 60px;
    border-radius: 50%;
    border: none;
    cursor: pointer;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    transition: all .3s;
}
.pressed{
    transform: scale(1.1);
}

.circle-btn-primary:active{
    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
}
/* ... */

